# shimmy

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_10THEME_LAUNCH_STRATEGY.md  CONSOLE_RECONSTRUCTION_INVENTORY.md  CONSOLE_RECOVERY_CHECKLIST.md  CONSOLE_RECREATION_LOG.md  COPILOT_LOGS_SUPPLEMENT_INDEX.md  Cargo.toml  DEVELOPERS.md  Dockerfile  Dockerfile.cpu  ORCHESTRATOR_IMPLEMENTATION_SUMMARY.md  PLAN-test-rewrite.md  README.md  RECONSTRUCTION_AUDIT_REPORT.md  RECONSTRUCTION_PLAYBOOK.md  RELEASE_GATES_CHECKLIST.md  RELEASE_PROCESS.md  ROADMAP.md  SCHEMA_AUDIT_REPORT.md  SCHEMA_IMPLEMENTATION_PLAN.md  SHAKEDOWN_VALIDATION_REPORT.md  SHIMMY_CHAT_LOGS_COMPLETE.md  SPONSORS.md  SPONSORS.md.bak.20260116-143119  TASK_LIST.md  THEME_FACTORY_INDEX.md  THEME_PRIMITIVE_VALIDATION.md  THEME_VALIDATION_QUICKSTART.md  all_zeroed_files.txt  analyze-screenshot.js  bash.exe.stackdump  build.rs  check-stack.sh  debug-seer.json  deny.toml  dependency_graph.svg.dot  (+22 more)
.cargo/: config.toml
.claude/: settings.local.json
.git-rewrite/: backup-refs  commit  message  raw-refs  revs
.github/: COPILOT_INSTRUCTIONS_STRICT.md  architectural-overview.md  copilot-autonomy-acceptance.md  copilot-instructions.md
.kiro/: EXECUTION_ROADMAP.md  QUICK_REFERENCE.md  SHAKEDOWN_EXECUTION_LOG.md  SHAKEDOWN_EXECUTION_PLAN.md  SHAKEDOWN_REPORT_SHIMMY_DEFAULT.md  SHAKEDOWN_SESSION_REPORT.md  SHIMMY_DEFAULT_TEST_PLAN.md  SHIMMY_SHAKEDOWN_SPEC.md  SHIMMY_THEME_FIX_PLAN.md  THEME_SHAKEDOWN_CHECKLIST.md  VERIFICATION_COMPLETE.md  WEBSOCKET_FIX_PRESCRIPTION.md
.test-cache/: test-runner  test-success-commit  test-success-timestamp
console/: .clippy.toml  CONSOLE_SPEC.md  Cargo.toml
console/src/: config.rs  history.rs  lib.rs  session.rs
console/src/adapters/: http_adapter.rs  mock_adapter.rs  mod.rs  ws_adapter.rs
console/src/commands/: analyze.rs  chat.rs  config.rs  edit.rs  license.rs  mod.rs  model.rs  sessions.rs
console/src/discovery/: mod.rs
console/src/license/: client.rs  mod.rs  validation.rs  validator.rs
console/src/tools/: analysis.rs  analysis_tests.rs  command.rs  command_git_tests.rs  docs.rs  docs_tests.rs  file_ops.rs  git.rs  image.rs  loader.rs  mod.rs  system.rs
console/src/websocket/: bridge.rs  mod.rs  router.rs  server.rs
console/tests/: integration_tests.rs  model_helpers.rs  websocket_chat_tests.rs
deploy/: Dockerfile
docs/: AIRFRAME_MOE_ROADMAP.md  ARCHITECTURE.md  CHAT_TEMPLATES.md  CONFIGURATION.md  CONSOLE_STATUS_RECOVERY.md  CONSOLE_VS_CLI_DIFFERENCES.md  CREATE_FILE_PROBE__2025-11-08.md  CROSS_PLATFORM_RELEASES.md  EXTENDED_CONTEXT.md  FEATURES.md  FRONTEND_CONNECTIVITY_ARCHITECTURE_AUDIT.md  FRONTEND_PLUGIN_SPEC.md  GPU_PIPELINE.md  MIGRATION_v2.md  MODEL_EXPANSION.md  MOE-CPU-OFFLOADING-WHITEPAPER.md  MOE-TECHNICAL-REPORT.md  MOE-TECHNICAL-VALIDATION.md  ORCHESTRATOR_MIGRATION_PLAN.md  ORCHESTRATOR_PROGRESS.md  ORCHESTRATOR_RELEASE_CHECKLIST.md  ORCHESTRATOR_USAGE.md  PERFORMANCE.md  QUANTIZATION.md  REGRESSION_TESTING.md  SESSION_THEME_VALIDATOR_RECORD.md  SIDECAR_SHAKEDOWN_CHECKLIST.md  TROUBLESHOOTING.md  USER_MANUAL.zh-CN.md  USER_MANUAL.zh-TW.md  VISION_TOOL_ARCHITECTURE.md  WINDOWS_GPU_BUILD_GUIDE.md  chat.md  quickstart.md  v2-roadmap.md
examples/: aga_64bit.rs
logs/: orchestrator-report.json  stack-verify-report.json
logs-supplement/: vscode_logs_hits_actions.txt  vscode_logs_hits_key_files.txt  vscode_logs_hits_repos_shimmy.txt
reconstruction-dossiers/: chatSessions_best_pointers.md  chatSessions_first_last_pointers.md  chatSessions_hits_summary.md  targets.txt
scripts/: dco-signoff.py  generate-homebrew-formula.sh  generate-types.js  moe_stress_test.py  run-regression-tests-auto.sh  run-regression-tests.sh  test-locally.sh  test-mlx-installation.sh  verify-report.schema.json
shimmy-vscode/: shimmy-vscode-0.1.0.vsix
src/: anthropic_compat.rs  api.rs  auto_discovery.rs  chat.md  cli.rs  console.rs  discovery.rs  discovery_invariants_only.rs  discovery_service.rs  dispatcher.rs  error.rs  http_adapter.rs  invariant_ppt.rs  lib.rs  main.rs  main_integration.rs  metrics.rs  model_manager.rs  model_registry.rs  openai_compat.rs  orchestrator.rs  port_manager.rs  preloading.rs  safetensors_adapter.rs  server.rs  templates.rs  test_utils.rs  token_meter.rs  tools.rs  vision.rs  workflow.rs
tests/: anthropic_api_integration_test.rs  api_error_handling_test.rs  apple_silicon_detection_test.rs  chat_template_integration.rs  cli_integration_tests.rs  compilation_regression_test.rs  compile_checks.rs  console_64bit_theme_test.rs  console_complete_tool_test.rs  console_comprehensive_tool_test.rs  console_discovery_integration_test.rs  core.rs  (+44 more)
(+224 files in other folders)
