[package]
name = "shimmy-console-lib"
version = "1.0.0"
edition = "2021"

[features]
default = []
license-validation = ["dep:jsonwebtoken"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
jsonwebtoken = { version = "8", optional = true }
axum = { version = "0.7", features = ["http1","json","ws"] }

[dev-dependencies]